added a featurin that shows the definition of the selected word

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,11 @@
       "run_at": "document_end"
     }
   ],
+  "action": {
+    "default_icon": "js.png",
+    "default_popup": "./popup/popup.html",
+    "default_title": "Pick the word selected"
+  },
   "permissions": ["tabs", "activeTab"],
   "host_permissions": ["<all_urls>"]
 }
